--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 book:
   title: "SG0002"
-  author: "Jane Doe"
+  author: "Izar de Villasante"
   date: "1/31/2023"
   chapters:
     - index.qmd
@@ -16,6 +16,8 @@ bibliography: references.bib
 
 format:
   html:
+    self-contained: true
+    embed-resources: true
     theme: cosmo
 
 
